--- a/lock/templates/index.html
+++ b/lock/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title></title>
+  <title>DOOR LOCK</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% load static %}
@@ -17,7 +17,12 @@
       <div class="d-flex justify-content-center">
             <p>STATUS=</p>
             {% block content %}
-              <p>{{status}}</p>
+            {% if status == 0 %}
+              <p>LOCKED</p>
+            {% endif %}
+            {% if status == 1 %}
+              <p>UNLOCKED</p>
+            {% endif %}              
             {% endblock %}
       </div>
       
