--- a/lock/templates/index.html
+++ b/lock/templates/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
       <div class="d-flex justify-content-center">
-            <a href="close_door" class="btn btn-success">LOCK DOOR</a>
-            <a href="open_door" class="btn btn-danger">UNLOCK DOOR</a>
+            <a href="{% url 'close' %}" class="btn btn-success">LOCK DOOR</a>
+            <a href="{% url 'open' %}" class="btn btn-danger">UNLOCK DOOR</a>
       </div>
       
       <div class="d-flex justify-content-center">
